--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="car">
-    <img src="https://www.jing.fm/clipimg/full/150-1506682_race-car-clipart-top-view-car-cliparts-top.png" alt="Car" class="car-img">
+    <img src="./images/150-1506682_race-car-clipart-top-view-car-cliparts-top.png" alt="Car" class="car-img">
   </div>
   <script src="./main.js"></script>
 </body>
