--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="car">
+  <div class="car" id="car">
     <img src="./images/150-1506682_race-car-clipart-top-view-car-cliparts-top.png" alt="Car" class="car-img">
   </div>
   <script src="./main.js"></script>
