completed issue-4-stop-car

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <title>Document</title>
+  <link rel="icon" href="./images/favicon.ico">
+  <title>Driving Game</title>
 </head>
 <body>
   <div class="car" id="car">
