made edits to code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="car" id="car">
-    <img src="./images/150-1506682_race-car-clipart-top-view-car-cliparts-top.png" alt="Car" class="car-img">
+    <img src="./images/f1.svg" alt="Car" class="car-img" id="car-img">
   </div>
   <script src="./main.js"></script>
 </body>
