--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
-  <link rel="icon" href="./images/favicon.ico">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="images/f1.svg">
   <title>Driving Game</title>
 </head>
 <body>
   <div class="car" id="car">
-    <img src="./images/f1.svg" alt="Car" class="car-img" id="car-img">
+    <img src="images/f1.svg" alt="Car" class="car-img" id="car-img">
   </div>
-  <script src="./main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
