--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="images/f1.svg">
-  <title>Driving Game</title>
+  <title>Drive</title>
 </head>
 <body>
   <div class="car" id="car">
